--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 
 [versions]
-kotlin-version = "2.1.10"
-ktor-version = "3.0.3"
+kotlin-version = "2.2.20"
+ktor-version = "3.3.3"
 logback-version = "1.4.14"
 jbcrypt-version = "0.4"
 serialization-plugin-version = "2.1.0"
@@ -18,6 +18,7 @@ ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback-version" }
 ktor-server-config-yaml = { module = "io.ktor:ktor-server-config-yaml", version.ref = "ktor-version" }
 ktor-server-test-host = { module = "io.ktor:ktor-server-test-host", version.ref = "ktor-version" }
+ktor-server-status-pages = { module = "io.ktor:ktor-server-status-pages", version.ref = "ktor-version" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin-version" }
 org-mindrot-jbcrypt = { module = "org.mindrot:jbcrypt", version.ref = "jbcrypt-version"}
 
