--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -19,5 +19,87 @@ paths:
               examples:
                 Example#1:
                   value: "Hello World!"
+  /auth/signup:
+    post:
+      summary: "Sign up a new user"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthRequest'
+      responses:
+        "200":
+          description: "User created and JWT token returned"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthResponse'
+        "400":
+          description: "Invalid request data"
+        "409":
+          description: "User already exists"
+      tags:
+        - Auth
+  /auth/login:
+    post:
+      summary: "Login user"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthRequest'
+      responses:
+        "200":
+          description: "JWT token returned"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthResponse'
+        "400":
+          description: "Invalid request data"
+        "401":
+          description: "Invalid credentials"
+      tags:
+        - Auth
+  /welcome:
+    get:
+      summary: "Welcome message for authenticated users"
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: "Welcome message"
+          content:
+            text/plain:
+              schema:
+                type: string
+      tags:
+        - Protected
 components:
-  schemas: {}
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+  schemas:
+    AuthRequest:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+        password:
+          type: string
+          format: password
+      required:
+        - email
+        - password
+    AuthResponse:
+      type: object
+      properties:
+        token:
+          type: string
+      required:
+        - token
